force-app/main/default/objects/Bike_Old__c/Bike_Old__c.object-meta.xml
<CustomObject>
    <label>Bike_Old</label>
    <nameField>
        <displayFormat>B-{0000}</displayFormat>
        <label>Bike Record</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bike_Olds</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>