force-app/main/default/objects/Bike_Old__c/fields/Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Account_Number__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Number</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Bikes</relationshipName>
    <type>Lookup</type>
</CustomField>