force-app/main/default/objects/Bike_Old__c/fields/Bike_Colour__c.field-meta.xml
<CustomField>
    <fullName>Bike_Colour__c</fullName>
    <label>Bike Colour</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Black</fullName>
            </value>
            <value>
                <fullName>Blue</fullName>
            </value>
            <value>
                <fullName>Red</fullName>
            </value>
            <value>
                <fullName>Voilet</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>