force-app/main/default/objects/Bike_Old__c/fields/Bike_Name__c.field-meta.xml
<CustomField>
    <fullName>Bike_Name__c</fullName>
    <label>Bike Name</label>
    <length>10</length>
    <type>Text</type>
</CustomField>