force-app/main/default/objects/Bike_Old__c/fields/Bike_number__c.field-meta.xml
<CustomField>
    <fullName>Bike_number__c</fullName>
    <label>Bike number</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>